--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,9 @@
     "@types/node": "^22.13.7",
     "nodemon": "^3.1.9",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2"
   }
 }
