refactor: update package dependencies and restructure project files
- Added dotenv, mongodb, and mongoose to dependencies in package.json
- Updated @types/node version in devDependencies
- Changed dev script to use index.ts instead of src/index.ts
- Added MongoDB connection logic in a new db.ts file
- Removed old index.ts and user management logic
- Updated tsconfig.json to include index.ts
- Documented MongoDB connection string in notes.md

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,6 @@
     "resolveJsonModule": true,
     "moduleResolution": "node"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "index.ts"],
   "exclude": ["node_modules"]
 }
