--- a/backend/package.json
+++ b/backend/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node index.ts",
     "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.13.7",
+    "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
     "typescript": "^5.8.2"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
-    "express": "^4.21.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2"
   }
 }
